--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,6 @@
   "presets": ["es2015", "react", "stage-0"],
   "plugins": [
     "./tools/babelRelayPlugin",
+    "transform-flow-strip-types"
   ]
 }
