--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Keep track of animals in kennels",
   "main": "index.js",
   "scripts": {
-    "build": "npm run lint && npm run update-schema && npm run webpack",
+    "build": "npm run lint && npm run updateschema && npm run webpack",
     "lint": "eslint *.js src tools",
     "start": "gulp start-web-server",
     "updateschema": "babel-node tools/updateSchema.js",
     "webpack": "NODE_ENV=production webpack -p",
     "test": "gulp run-tests",
-    "flow": "flow; test $? -eq 0 -o $? -eq 2"
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
+    "refresh": "npm run updateschema && npm run flow && npm run test && gulp"
   },
   "author": "Thinkovator Inc",
   "license": "ISC",
