--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   "author": "Thinkovator Inc",
   "license": "ISC",
   "dependencies": {
+    "auth0-lock": "^10.7.3",
     "babel-relay-plugin": "^0.10.0",
+    "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
+    "dotenv": "^2.0.0",
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
+    "express-jwt": "^5.1.0",
     "graphql": "^0.8.2",
     "graphql-relay": "^0.4.4",
     "history": "^2.1.2",
