--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Keep track of animals in kennels",
   "main": "index.js",
   "scripts": {
-    "build": "npm run lint && npm run update-schema && npm run webpack",
-    "lint": "eslint *.js src tools",
-    "start": "gulp && gulp start-web-server",
-    "update-schema": "babel-node tools/updateSchema.js",
+    "build": "gulp clean-dist && gulp && run update-schema",
     "test": "./node_modules/.bin/jest",
+    "start": "gulp start-web-server",
+    "restart": "gulp && npm start",
+    "update-schema": "babel-node tools/updateSchema.js",
+    "lint": "eslint *.js src tools",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "test-debug": "node --debug-brk ./node_modules/.bin/jest -i --no-cache",
     "debug": "node --inspect --debug-brk ./dist/server/server-debug.js",
@@ -45,6 +46,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "del": "^2.2.2",
     "enzyme": "^2.6.0",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
@@ -53,6 +55,7 @@
     "eslint-plugin-react": "^6.8.0",
     "exports-loader": "^0.6.3",
     "flow-bin": "^0.37.4",
+    "fs": "0.0.1-security",
     "grunt-webpack": "^1.0.18",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
